added screenshots, updated readme and changelog

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "henna",
-    "displayName": "henna",
+    "displayName": "Henna Color Theme",
     "description": "",
     "version": "0.0.1",
     "publisher": "httpsterio",
