--- a/package.json
+++ b/package.json
@@ -2,8 +2,18 @@
     "name": "henna",
     "displayName": "Henna Color Theme",
     "description": "",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "publisher": "httpsterio",
+    "homepage": "http://httpster.io/vscode-henna",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/httpsterio/vscode-henna"
+    },
+    "galleryBanner": {
+        "color": "#21272e",
+        "theme": "dark"
+    },
+    "icon": "henna-color-theme.png",
     "engines": {
         "vscode": "^1.12.0"
     },
