--- a/vscode-henna/package.json
+++ b/vscode-henna/package.json
@@ -1,32 +1,27 @@
 {
-    "name": "henna",
-    "displayName": "Henna Color Theme",
-    "description": "Henna is a colour theme for Visual Studio Code. It's utilizing the new theme standard that allows workbench colouring and it's not relying on the outdated Textmate theme format. Each colour is selected carefully to help legibility (with dyslexics like myself in mind).. Inspired by my green-eyed redhead girl.",
-    "version": "0.9.0",
-    "publisher": "httpsterio",
-    "homepage": "http://httpster.io/vscode-henna",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/httpsterio/vscode-henna"
-    },
-    "galleryBanner": {
-        "color": "#21272e",
-        "theme": "dark"
-    },
-    "icon": "logo.png",
-    "engines": {
-        "vscode": "^1.12.0"
-    },
-    "categories": [
-        "Themes"
-    ],
-    "contributes": {
-        "themes": [
-            {
-                "label": "henna",
-                "uiTheme": "vs-dark",
-                "path": "./themes/henna-color-theme.json"
-            }
-        ]
-    }
+  "name": "vscode-henna-light",
+  "displayName": "VSCode-Henna-Light",
+  "description": "Light theme",
+  "version": "0.0.1",
+  "publisher": "httpsterio",
+  "engines": {
+    "vscode": "^1.28.0"
+  },
+  "categories": [
+    "Themes"
+  ],
+  "contributes": {
+    "themes": [
+      {
+        "label": "Henna Light",
+        "uiTheme": "vs-light",
+        "path": "./themes/henna-light.json"
+      },
+      {
+        "label": "Henna Dark",
+        "uiTheme": "vs-dark",
+        "path": "./themes/henna-dark.json"
+      }
+    ]
+  }
 }
